[package]
authors = ['Anonymous']
description = 'Proof of existance pallet'
edition = '2018'
homepage = 'https://tswap.org'
license = 'GPL'
name = 'pallet-proof'
version = '2.0.0-alpha.5'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab'
version = '2.0.0-alpha.5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab'
version = '2.0.0-alpha.5'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab'
version = '2.0.0-alpha.5'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
    'sp-std/std',
]
